WorkShop_2.3_Ingress_Network/apisix/helm/apisix-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: apisix-gateway
  namespace: ingress-apisix
spec:
  gatewayClassName: apisix-gateway-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: All
